--- a/_assets/up.less
+++ b/_assets/up.less
@@ -17,7 +17,7 @@ body {
 }
 h1,h2,h3,h4,h5,h6 {
   font-weight: 100;
-  text-transform: uppercase;
+//  text-transform: uppercase;
   margin-top: 20px;
 }
 h2,h3,h4,h5,h6 {
@@ -48,7 +48,7 @@ article,
     margin-top: 20px;
   }
   h1 a {
-    text-transform: uppercase;
+//    text-transform: uppercase;
     font-size: 1.2em;
     font-weight: 100;
   }
@@ -61,7 +61,7 @@ article,
   }
   section.byline {
     font-size: 0.8em;
-    text-transform: uppercase;
+//    text-transform: uppercase;
     padding-bottom: 15px;
     color: #999;
   }
@@ -94,7 +94,7 @@ ul.listing {
     span {
       padding-top: 3px;
       float: right;
-      text-transform: uppercase;
+//      text-transform: uppercase;
       font-size: 12px;
       color: #999;
     }
