--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-2 col-lg-offset-4">
-          <a href="https://twitter.com/{{ site.author.twitter }}">
-            <i class="fa fa-twitter fa-4x"></i>
-            <div>Follow me on Twitter.</div>
+          <a href="https://www.linkedin.com/in/{{ site.author.linkedin }}">
+            <i class="fa fa-linkedin fa-4x"></i>
+            <div>See my linkedin profile.</div>
           </a>
         </div>
         <div class="col-lg-2 next">
